<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GenerateQrCodeActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/full_name"
            android:inputType="textCapSentences"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/whiteColor"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameLayout"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/user_age"
            android:inputType="number"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/whiteColor"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/generateQrCodeButton"
        android:layout_below="@+id/ageLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@null" />

    </FrameLayout>

    <Button
        android:id="@+id/generateQrCodeButton"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/square_primary_button_drawable"
        android:text="@string/generate_qr_code"
        android:textColor="@color/whiteColor"
        android:textStyle="bold" />

</RelativeLayout>